--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,179 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Сайт">
+  <title>Интернет-магазин кошачьего корма "Кэт энерджи"</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-  </body>
+<body class="page__body">
+  <header class="main-header page__header">
+    <div class="page__centerer">
+      <div class="main-header__container">
+        <a class="main-header__logo logo link" href="#">
+          <img class="main-header__logo-image" src="" alt="Эмблема интернет-магазина Кэт энерджи." width="101" height="18">
+          <img class="main-header__logo" src="" alt="Логотип интернет-магазина Кэт энерджи." width="101" height="18">
+        </a>
+        <nav class="main-navigation">
+          <ul class="main-navigation__list list main-navigation__list--close main-navigation__list--nojs">
+            <li class="main-navigation__item">
+              <a class="main-navigation__link link main-navigation__link--current" href="index.html">Главная</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+          <button class="main-navigation__toggle" type="button">
+            <span class="visually-hidden">Открыть меню.</span>
+          </button>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main class="main-index">
+    <section class="intro">
+      <div class="page__centerer">
+        <h1 class="intro__title titleproduct-card__title title title--lvl4">Функциональное питание для котов</h1>
+        <p class="intro__description">Занялся собой? Займись котом!</p>
+        <a class="intro__button button link" href="#">Подобрать программу</a>
+        <div class="intro__image-wrapper">
+          <img class="intro__image" src="" alt="Изображение корма Кэт Энерджи со вкусом курица." width="280" height="270">
+        </div>
+      </div>
+    </section>
+    <section class="main-index__want want">
+      <div class="page__centerer">
+        <div class="want__container">
+          <h2 class="visually-hidden">Подбор корма по вашим потребностям.</h2>
+          <ul class="want__list list">
+            <li class="want__item want__item--weight-loss">
+              <h3 class="want__title title title--lvl3">Похудение</h3>
+              <p class="want__description">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+              <a class="want__link link" href="#">Каталог slim</a>
+            </li>
+            <li class="want__item want__item--weight-gain">
+              <h3 class="want__title title title--lvl3">Набор массы</h3>
+              <p class="want__description">Заработать авторитет среди дворовых котов и&nbsp;даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+              <a class="want__link link" href="#">Каталог pro</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="main-index__idea idea">
+      <div class="page__centerer">
+        <div class="idea__container">
+          <h2 class="idea__title title title--lvl2">Как это работает</h2>
+          <ol class="idea__list list">
+            <li class="idea__item">
+              <p class="idea__description">Функциональное питание содержит только полезные питательные вещества.</p>
+            </li>
+            <li class="idea__item">
+              <p class="idea__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            </li>
+            <li class="idea__item">
+              <p class="idea__description">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
+            </li>
+            <li class="idea__item">
+              <p class="idea__description">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
+            </li>
+          </ol>
+        </div>
+      </div>
+    </section>
+    <section class="main-index__slider slider">
+      <div class="page__centerer">
+        <div class="slider__container">
+          <h2 class="slider__title title title--lvl2">Живой пример</h2>
+          <div class="slider__content">
+            <p class="slider__description idea__description">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
+            <dl class="slider__outlay outlay">
+              <div class="slider__characteristic">
+                <dt class="slider__outlay-characteristic">снижение веса</dt>
+                <dd class="slider__outlay-meaning">5 кг</dd>
+              </div>
+              <div class="slider__characteristic">
+                <dt class="slider__outlay-characteristic">затрачено времени</dt>
+                <dd class="slider__outlay-meaning">60 дней</dd>
+              </div>
+              <div class="slider__characteristic slider__characteristic--total">
+                <dt class="outlay__characteristic">Затраты на питание:</dt>
+                <dd class="outlay__meaning">15 000 руб.</dd>
+              </div>
+            </dl>
+          </div>
+          <div class="slider__image-wrapper">
+            <img class="slider__image" src="" alt="Изображение кота до похудения." width="280" height="256">
+            <div class="slider__control"></div>
+            <img class="slider__image" src="" alt="Изображение кота после похудения." width="280" height="256">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="main-index__map map map--nojs">
+      <div class="page__centerer">
+        <div class="map__container">
+          <h2 class="map__title title title--lvl4">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
+          <address class="map__address address">
+            <span class="address__text">ул. Большая</span>
+            <span class="address__text">Конюшенная, д. 19/8</span>
+            <span class="address__text">Санкт-Петербург</span>
+          </address>
+        </div>
+      </div>
+      <div class="map__wrapper">
+        <picture>
+          <source media="(min-width: 769px)" srcset="" width="1440" height="400">
+          <source media="(min-width: 321px) and (max-width: 768px)" srcset="" width="768" height="400">
+          <source type="image/webp" srcset="" width="320" height="362">
+          <source media="(min-width: 769px)" srcset="" width="1440" height="400">
+          <source media="(min-width: 321px) and (max-width: 768px)" srcset="" width="768" height="400">
+          <img class="map__image" src="" srcset="" alt="Карта Санкт-Петербурга с отметкой на нашем офисе." width="320" height="362" loading="lazy">
+        </picture>
+      </div>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <div class="page__centerer">
+      <div class="page-footer__container">
+        <a class="page-footer__logo link" href="#">
+          <img class="logo" src="" alt="Логотип интернет-магазина Кэт энерджи." width="128" height="24">
+        </a>
+        <ul class="page-footer__social-list list">
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-link page-footer__social-link--vk" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Кэт энерджи ВКонтакте.</span>
+            </a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-link page-footer__social-link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Кэт энерджи на YouTube.</span>
+            </a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-link page-footer__social-link--telegram" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Кэт энерджи в Телеграм.</span>
+            </a>
+          </li>
+        </ul>
+        <div class="page-footer__copyright copyright">
+          <span class="visually-hidden">Ссылка на интенсив по адаптивной верстке htmlacademy.</span>
+          <a class="copyright__link link" href="https://htmlacademy.ru/intensive/adaptive" lang="en">HTML Academy
+            <svg class="copyright__link-icon" width="27" height="34">
+              <use href="./img/stack.svg#htmlacademy"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
