--- a/source/index.html
+++ b/source/index.html
@@ -15,8 +15,8 @@
     <div class="page__centerer">
       <div class="main-header__container">
         <a class="main-header__logo logo link" href="#">
-          <img class="main-header__logo-image" src="" alt="Эмблема интернет-магазина Кэт энерджи." width="101" height="18">
-          <img class="main-header__logo" src="" alt="Логотип интернет-магазина Кэт энерджи." width="101" height="18">
+          <img class="main-header__logo-image" src="./img/logo-mark.svg" alt="Эмблема интернет-магазина Кэт энерджи." width="33" height="37">
+          <img class="main-header__logo-world" src="./img/logo.svg" alt="Логотип интернет-магазина Кэт энерджи." width="101" height="18">
         </a>
         <nav class="main-navigation">
           <ul class="main-navigation__list list main-navigation__list--close main-navigation__list--nojs">
@@ -40,11 +40,13 @@
   <main class="main-index">
     <section class="intro">
       <div class="page__centerer">
-        <h1 class="intro__title titleproduct-card__title title title--lvl4">Функциональное питание для котов</h1>
-        <p class="intro__description">Занялся собой? Займись котом!</p>
+        <div class="intro__container">
+          <h1 class="intro__title title">Функциональное <br>питание для котов</h1>
+          <p class="intro__description">Занялся собой? Займись котом!</p>
+          <div class="intro__image-wrapper">
+            <img class="intro__image" src="./img/index-can-mobile@1.png" alt="Изображение корма Кэт Энерджи со вкусом курица." width="280" height="270">
+        </div>
         <a class="intro__button button link" href="#">Подобрать программу</a>
-        <div class="intro__image-wrapper">
-          <img class="intro__image" src="" alt="Изображение корма Кэт Энерджи со вкусом курица." width="280" height="270">
         </div>
       </div>
     </section>
@@ -174,6 +176,7 @@
       </div>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
