--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,20 +14,20 @@
   <header class="main-header page__header">
     <div class="page__centerer">
       <div class="main-header__container">
-        <a class="main-header__logo logo link" href="#">
-          <img class="main-header__logo-image" src="" alt="Эмблема интернет-магазина Кэт энерджи." width="101" height="18">
-          <img class="main-header__logo" src="" alt="Логотип интернет-магазина Кэт энерджи." width="101" height="18">
+        <a class="main-header__logo logo" href="index.html">
+          <img class="main-header__logo-image" src="./img/logo-mark.svg" alt="Эмблема интернет-магазина Кэт энерджи." width="33" height="37">
+          <img class="main-header__logo-world" src="./img/logo.svg" alt="Логотип интернет-магазина Кэт энерджи." width="101" height="18">
         </a>
         <nav class="main-navigation">
-          <ul class="main-navigation__list list main-navigation__list--close main-navigation__list--nojs">
+          <ul class="main-navigation__list main-navigation__list--close main-navigation__list--nojs">
             <li class="main-navigation__item">
-              <a class="main-navigation__link link main-navigation__link--current" href="index.html">Главная</a>
+              <a class="main-navigation__link main-navigation__link--current" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link link" href="catalog.html">Каталог продукции</a>
+              <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link link" href="form.html">Подбор программы</a>
+              <a class="main-navigation__link" href="form.html">Подбор программы</a>
             </li>
           </ul>
           <button class="main-navigation__toggle" type="button">
@@ -41,15 +41,15 @@
     <section class="catalog-products">
       <div class="page__centerer">
         <div class="catalog-products__container">
-          <h1 class="catalog-products__title title title--lvl4">Каталог продукции</h1>
-          <ul class="catalog-products__list list">
+          <h1 class="catalog-products__title">Каталог продукции</h1>
+          <ul class="catalog-products__list">
             <li class="catalog-products__card product-card">
-              <a class="product-card__link link" href="#">
-                <img class="product-card__image" src="" alt="Cat Energy PRO 500 г." width="68" height="86">
+              <a class="product-card__link" href="#">
+                <img class="product-card__image" src="./img/chicken-05-mobile@1.png" alt="Cat Energy PRO 500 г." width="68" height="86">
               </a>
               <div class="product-card__wrapper">
-                <a class="product-card__link link">
-                  <h3 class="product-card__title title title--lvl4">Cat Energy PRO 500 г</h3>
+                <a class="product-card__link">
+                  <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
                 </a>
                 <dl class="product-card__characteristics">
                   <div class="product-card__characteristic-wrapper">
@@ -66,15 +66,15 @@
                   </div>
                 </dl>
               </div>
-              <a class="product-card__button button">Заказать</a>
+              <a class="product-card__button">Заказать</a>
             </li>
             <li class="catalog-products__card product-card">
-              <a class="product-card__link link" href="#">
-                <img class="product-card__image" src="" alt="Cat Energy PRO 1000 г." width="84" height="100">
+              <a class="product-card__link" href="#">
+                <img class="product-card__image" src="./img/chicken-mobile@1.png" alt="Cat Energy PRO 1000 г." width="84" height="100">
               </a>
               <div class="product-card__wrapper">
-                <a class="product-card__link link">
-                  <h3 class="product-card__title title title--lvl4">Cat Energy PRO 1000 г</h3>
+                <a class="product-card__link">
+                  <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
                 </a>
                 <dl class="product-card__characteristics">
                   <div class="product-card__characteristic-wrapper">
@@ -91,15 +91,15 @@
                   </div>
                 </dl>
               </div>
-              <a class="product-card__button button">Заказать</a>
+              <a class="product-card__button">Заказать</a>
             </li>
             <li class="catalog-products__card product-card">
-              <a class="product-card__link link" href="#">
-                <img class="product-card__image" src="" alt="Cat Energy PRO 500 г." width="68" height="86">
+              <a class="product-card__link" href="#">
+                <img class="product-card__image" src="./img/fish-05-mobile@1.png" alt="Cat Energy PRO 500 г." width="68" height="86">
               </a>
               <div class="product-card__wrapper">
-                <a class="product-card__link link">
-                  <h3 class="product-card__title title title--lvl4">Cat Energy PRO 500 г</h3>
+                <a class="product-card__link">
+                  <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
                 </a>
                 <dl class="product-card__characteristics">
                   <div class="product-card__characteristic-wrapper">
@@ -116,15 +116,15 @@
                   </div>
                 </dl>
               </div>
-              <a class="product-card__button button">Заказать</a>
+              <a class="product-card__button">Заказать</a>
             </li>
             <li class="catalog-products__card product-card">
-              <a class="product-card__link link" href="#">
-                <img class="product-card__image" src="" alt="Cat Energy PRO 1000 г." width="84" height="100">
+              <a class="product-card__link" href="#">
+                <img class="product-card__image" src="./img/fish-mobile@1.png" alt="Cat Energy PRO 1000 г." width="84" height="100">
               </a>
               <div class="product-card__wrapper">
-                <a class="product-card__link link">
-                  <h3 class="product-card__title title title--lvl4">Cat Energy PRO 1000 г</h3>
+                <a class="product-card__link">
+                  <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
                 </a>
                 <dl class="product-card__characteristics">
                   <div class="product-card__characteristic-wrapper">
@@ -141,15 +141,15 @@
                   </div>
                 </dl>
               </div>
-              <a class="product-card__button button">Заказать</a>
+              <a class="product-card__button">Заказать</a>
             </li>
             <li class="catalog-products__card product-card">
-              <a class="product-card__link link" href="#">
-                <img class="product-card__image" src="" alt="Cat Energy slim 500 г." width="68" height="86">
+              <a class="product-card__link" href="#">
+                <img class="product-card__image" src="./img/buckwheat-05-mobile@1.png" alt="Cat Energy slim 500 г." width="68" height="86">
               </a>
               <div class="product-card__wrapper">
-                <a class="product-card__link link">
-                  <h3 class="product-card__title title title--lvl4">Cat Energy slim 500 г</h3>
+                <a class="product-card__link">
+                  <h3 class="product-card__title">Cat Energy slim 500 г</h3>
                 </a>
                 <dl class="product-card__characteristics">
                   <div class="product-card__characteristic-wrapper">
@@ -166,15 +166,15 @@
                   </div>
                 </dl>
               </div>
-              <a class="product-card__button button">Заказать</a>
+              <a class="product-card__button">Заказать</a>
             </li>
             <li class="catalog-products__card product-card">
-              <a class="product-card__link link" href="#">
-                <img class="product-card__image" src="" alt="Cat Energy slim 1000 г." width="84" height="100">
+              <a class="product-card__link" href="#">
+                <img class="product-card__image" src="./img/buckwheat-mobile@1.png" alt="Cat Energy slim 1000 г." width="84" height="100">
               </a>
               <div class="product-card__wrapper">
-                <a class="product-card__link link">
-                  <h3 class="product-card__title title title--lvl4">Cat Energy slim 1000 г</h3>
+                <a class="product-card__link">
+                  <h3 class="product-card__title">Cat Energy slim 1000 г</h3>
                 </a>
                 <dl class="product-card__characteristics">
                   <div class="product-card__characteristic-wrapper">
@@ -191,15 +191,15 @@
                   </div>
                 </dl>
               </div>
-              <a class="product-card__button button">Заказать</a>
+              <a class="product-card__button">Заказать</a>
             </li>
             <li class="catalog-products__card product-card">
-              <a class="product-card__link link" href="#">
-                <img class="product-card__image" src="" alt="Cat Energy slim 500 г." width="68" height="86">
+              <a class="product-card__link" href="#">
+                <img class="product-card__image" src="./img/rice-05-mobile@1.png" alt="Cat Energy slim 500 г." width="68" height="86">
               </a>
               <div class="product-card__wrapper">
-                <a class="product-card__link link">
-                  <h3 class="product-card__title title title--lvl4">Cat Energy slim 500 г</h3>
+                <a class="product-card__link">
+                  <h3 class="product-card__title">Cat Energy slim 500 г</h3>
                 </a>
                 <dl class="product-card__characteristics">
                   <div class="product-card__characteristic-wrapper">
@@ -216,76 +216,77 @@
                   </div>
                 </dl>
               </div>
-              <a class="product-card__button button">Заказать</a>
+              <a class="product-card__button">Заказать</a>
+            </li>
+            <li class="catalog-products__show show">
+              <h3 class="show__title">Показать еще 100500 товаров</h3>
+              <p class="show__description">На&nbsp;самом деле вкусов гораздо больше!</p>
+              <a class="show__link">Показать все</a>
             </li>
           </ul>
-          <div class="catalog-products__show show">
-            <h3 class="show__title title title--lvl4">Показать еще 100500 товаров</h3>
-            <p class="show__description">На&nbsp;самом деле вкусов гораздо больше!</p>
-            <a class="show__link">Показать все</a>
-          </div>
           <div class="catalog-products__additional additional">
-            <h2 class="additional__title title title--lvl3">Дополнительные товары</h2>
-            <ul class="additional__list list">
+            <h2 class="additional__title">Дополнительные товары</h2>
+            <ul class="additional__list">
               <li class="additional__item additional-card">
-                <a class="additional-card__link link">
-                  <h3 class="additional-card__title title title--lvl4 title--lvl4-catalog">Сахарозаменитель</h3>
+                <a class="additional-card__link">
+                  <h3 class="additional-card__title">Сахарозаменитель</h3>
                 </a>
                 <p class="additional-card__units">1 упаковка (100 г)</p>
                 <p class="additional-card__price">200 ₽</p>
-                <a class="additional-card__button button">Заказать</a>
+                <a class="additional-card__button">Заказать</a>
               </li>
               <li class="additional__item additional-card">
-                <a class="additional-card__link link">
-                  <h3 class="additional-card__title title title--lvl4 title--lvl4-catalog">Питьевая вода</h3>
+                <a class="additional-card__link">
+                  <h3 class="additional-card__title">Питьевая вода</h3>
                 </a>
                 <p class="additional-card__units">5 литров</p>
                 <p class="additional-card__price">50 ₽</p>
-                <a class="additional-card__button button">Заказать</a>
+                <a class="additional-card__button">Заказать</a>
               </li>
               <li class="additional__item additional-card">
-                <a class="additional-card__link link">
-                  <h3 class="additional-card__title title title--lvl4 title--lvl4-catalog">Молоко</h3>
+                <a class="additional-card__link">
+                  <h3 class="additional-card__title">Молоко</h3>
                 </a>
                 <p class="additional-card__units">1 литр</p>
                 <p class="additional-card__price">100 ₽</p>
-                <a class="additional-card__button button">Заказать</a>
+                <a class="additional-card__button">Заказать</a>
               </li>
               <li class="additional__item additional-card">
-                <a class="additional-card__link link">
-                  <h3 class="additional-card__title title title--lvl4 title--lvl4-catalog">Витамины</h3>
+                <a class="additional-card__link">
+                  <h3 class="additional-card__title">Витамины</h3>
                 </a>
                 <p class="additional-card__units">1 упаковка (30 г)</p>
                 <p class="additional-card__price">300 ₽</p>
-                <a class="additional-card__button button">Заказать</a>
+                <a class="additional-card__button">Заказать</a>
               </li>
             </ul>
-          </div>
-          <div class="catalog-products__special-offer special-offer">
-            <p class="special-offer__text">Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!</p>
+            <div class="catalog-products__special-offer special-offer">
+              <h2 class="visually-hidden">Наши акции</h2>
+              <p class="special-offer__text">Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="main-inner__map map map--nojs">
+    <section class="main-inner__map map map--inner map--nojs">
       <div class="page__centerer">
         <div class="map__container">
-          <h2 class="map__title title title--lvl4">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
+          <h2 class="map__title">Приглашаем <br> к&nbsp;сотрудничеству <br> дилеров!</h2>
           <address class="map__address address">
             <span class="address__text">ул. Большая</span>
             <span class="address__text">Конюшенная, д. 19/8</span>
-            <span class="address__text">Санкт-Петербург</span>
+            <span class="address__text address__text--city">Санкт-Петербург</span>
           </address>
         </div>
       </div>
       <div class="map__wrapper">
         <picture>
-          <source media="(min-width: 769px)" srcset="" width="1440" height="400">
-          <source media="(min-width: 321px) and (max-width: 768px)" srcset="" width="768" height="400">
-          <source type="image/webp" srcset="" width="320" height="362">
-          <source media="(min-width: 769px)" srcset="" width="1440" height="400">
-          <source media="(min-width: 321px) and (max-width: 768px)" srcset="" width="768" height="400">
-          <img class="map__image" src="" srcset="" alt="Карта Санкт-Петербурга с отметкой на нашем офисе." width="320" height="362" loading="lazy">
+          <source media="(min-width: 769px)" srcset="./img/map-desktop@2x.jpg" width="1440" height="400">
+          <source media="(min-width: 321px) and (max-width: 768px)" srcset="./img/map-tablet@2x.jpg" width="768" height="400">
+          <source type="image/webp" srcset="./img/map-mobile@2x.jpg" width="320" height="362">
+          <source media="(min-width: 769px)" srcset="./img/map-desktop@1.jpg" width="1440" height="400">
+          <source media="(min-width: 321px) and (max-width: 768px)" srcset="./img/map-tablet@1.jpg" width="768" height="400">
+          <img class="map__image" src="./img/map-mobile@1.jpg" srcset="" alt="Карта Санкт-Петербурга с отметкой на нашем офисе." width="320" height="362" loading="lazy">
         </picture>
       </div>
     </section>
@@ -293,10 +294,10 @@
   <footer class="page-footer">
     <div class="page__centerer">
       <div class="page-footer__container">
-        <a class="page-footer__logo link" href="#">
-          <img class="logo" src="" alt="Логотип интернет-магазина Кэт энерджи." width="128" height="24">
+        <a class="page-footer__logo" href="#">
+          <img class="logo" src="./img/logo.svg" alt="Логотип интернет-магазина Кэт энерджи." width="128" height="24">
         </a>
-        <ul class="page-footer__social-list list">
+        <ul class="page-footer__social-list">
           <li class="page-footer__social-item">
             <a class="page-footer__social-link page-footer__social-link--vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Кэт энерджи ВКонтакте.</span>
@@ -315,7 +316,7 @@
         </ul>
         <div class="page-footer__copyright copyright">
           <span class="visually-hidden">Ссылка на интенсив по адаптивной верстке htmlacademy.</span>
-          <a class="copyright__link link" href="https://htmlacademy.ru/intensive/adaptive" lang="en">HTML Academy
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" lang="en">HTML Academy
             <svg class="copyright__link-icon" width="27" height="34">
               <use href="./img/stack.svg#htmlacademy"></use>
             </svg>
