--- a/source/index.html
+++ b/source/index.html
@@ -14,20 +14,20 @@
   <header class="main-header page__header">
     <div class="page__centerer">
       <div class="main-header__container">
-        <a class="main-header__logo logo link" href="#">
+        <a class="main-header__logo logo" href="index.html">
           <img class="main-header__logo-image" src="./img/logo-mark.svg" alt="Эмблема интернет-магазина Кэт энерджи." width="33" height="37">
           <img class="main-header__logo-world" src="./img/logo.svg" alt="Логотип интернет-магазина Кэт энерджи." width="101" height="18">
         </a>
         <nav class="main-navigation">
-          <ul class="main-navigation__list list main-navigation__list--close main-navigation__list--nojs">
+          <ul class="main-navigation__list main-navigation__list--close main-navigation__list--nojs">
             <li class="main-navigation__item">
-              <a class="main-navigation__link link main-navigation__link--current" href="index.html">Главная</a>
+              <a class="main-navigation__link main-navigation__link--main main-navigation__link--current" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link link" href="catalog.html">Каталог продукции</a>
+              <a class="main-navigation__link main-navigation__link--main" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link link" href="form.html">Подбор программы</a>
+              <a class="main-navigation__link main-navigation__link--main" href="form.html">Подбор программы</a>
             </li>
           </ul>
           <button class="main-navigation__toggle" type="button">
@@ -41,29 +41,33 @@
     <section class="intro">
       <div class="page__centerer">
         <div class="intro__container">
-          <h1 class="intro__title title">Функциональное <br>питание для котов</h1>
+          <h1 class="intro__title">Функциональное <br>питание для котов</h1>
           <p class="intro__description">Занялся собой? Займись котом!</p>
+          <a class="intro__button" href="#">Подобрать программу</a>
           <div class="intro__image-wrapper">
-            <img class="intro__image" src="./img/index-can-mobile@1.png" alt="Изображение корма Кэт Энерджи со вкусом курица." width="280" height="270">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="./img/index-can-desktop@1.png 1x, ./img/index-can-desktop@2x.png 2x" width="552" height="499">
+              <source media="(min-width: 768px)" srcset="./img/index-can-tablet@1.png 1x, ./img/index-can-tablet@2x.png 2x" width="709" height="609">
+              <img class="intro__image" src="./img/index-can-mobile@1.png" srcset="./img/index-can-mobile@2x.png 2x" alt="Изображение корма Кэт Энерджи со вкусом курица." width="280" height="270">
+            </picture>
         </div>
-        <a class="intro__button button link" href="#">Подобрать программу</a>
-        </div>
+      </div>
       </div>
     </section>
     <section class="main-index__want want">
       <div class="page__centerer">
         <div class="want__container">
           <h2 class="visually-hidden">Подбор корма по вашим потребностям.</h2>
-          <ul class="want__list list">
+          <ul class="want__list">
             <li class="want__item want__item--weight-loss">
-              <h3 class="want__title title title--lvl3">Похудение</h3>
+              <h3 class="want__title">Похудение</h3>
               <p class="want__description">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="want__link link" href="#">Каталог slim</a>
+              <a class="want__link" href="#">Каталог slim</a>
             </li>
             <li class="want__item want__item--weight-gain">
-              <h3 class="want__title title title--lvl3">Набор массы</h3>
+              <h3 class="want__title">Набор массы</h3>
               <p class="want__description">Заработать авторитет среди дворовых котов и&nbsp;даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <a class="want__link link" href="#">Каталог pro</a>
+              <a class="want__link" href="#">Каталог pro</a>
             </li>
           </ul>
         </div>
@@ -71,31 +75,29 @@
     </section>
     <section class="main-index__idea idea">
       <div class="page__centerer">
-        <div class="idea__container">
-          <h2 class="idea__title title title--lvl2">Как это работает</h2>
-          <ol class="idea__list list">
-            <li class="idea__item">
-              <p class="idea__description">Функциональное питание содержит только полезные питательные вещества.</p>
-            </li>
-            <li class="idea__item">
-              <p class="idea__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-            </li>
-            <li class="idea__item">
-              <p class="idea__description">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
-            </li>
-            <li class="idea__item">
-              <p class="idea__description">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
-            </li>
-          </ol>
-        </div>
+        <h2 class="idea__title">Как это работает</h2>
+        <ol class="idea__list">
+          <li class="idea__item">
+            <p class="idea__description">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="idea__item">
+            <p class="idea__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
+          <li class="idea__item">
+            <p class="idea__description">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
+          </li>
+          <li class="idea__item">
+            <p class="idea__description">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
+          </li>
+        </ol>
       </div>
     </section>
     <section class="main-index__slider slider">
       <div class="page__centerer">
         <div class="slider__container">
-          <h2 class="slider__title title title--lvl2">Живой пример</h2>
+          <h2 class="slider__title">Живой пример</h2>
           <div class="slider__content">
-            <p class="slider__description idea__description">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
+            <p class="slider__description">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
             <dl class="slider__outlay outlay">
               <div class="slider__characteristic">
                 <dt class="slider__outlay-characteristic">снижение веса</dt>
@@ -112,9 +114,9 @@
             </dl>
           </div>
           <div class="slider__image-wrapper">
-            <img class="slider__image" src="" alt="Изображение кота до похудения." width="280" height="256">
+            <img class="slider__image slider__image--state_before" src="./img/fat-cat-mobile@1.png" srcset="./img/fat-cat-mobile@2x.png 2x" alt="Изображение кота до похудения." width="280" height="256">
             <div class="slider__control"></div>
-            <img class="slider__image" src="" alt="Изображение кота после похудения." width="280" height="256">
+            <img class="slider__image slider__image--state_after" src="./img/cat-thin-mobile@1.png" srcset="./img/thin-cat-mobile@2x.png 2x" alt="Изображение кота после похудения." width="280" height="256">
           </div>
         </div>
       </div>
@@ -122,22 +124,19 @@
     <section class="main-index__map map map--nojs">
       <div class="page__centerer">
         <div class="map__container">
-          <h2 class="map__title title title--lvl4">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
+          <h2 class="map__title">Приглашаем <br> к&nbsp;сотрудничеству <br> дилеров!</h2>
           <address class="map__address address">
             <span class="address__text">ул. Большая</span>
             <span class="address__text">Конюшенная, д. 19/8</span>
-            <span class="address__text">Санкт-Петербург</span>
+            <span class="address__text address__text--city">Санкт-Петербург</span>
           </address>
         </div>
       </div>
       <div class="map__wrapper">
         <picture>
-          <source media="(min-width: 769px)" srcset="" width="1440" height="400">
-          <source media="(min-width: 321px) and (max-width: 768px)" srcset="" width="768" height="400">
-          <source type="image/webp" srcset="" width="320" height="362">
-          <source media="(min-width: 769px)" srcset="" width="1440" height="400">
-          <source media="(min-width: 321px) and (max-width: 768px)" srcset="" width="768" height="400">
-          <img class="map__image" src="" srcset="" alt="Карта Санкт-Петербурга с отметкой на нашем офисе." width="320" height="362" loading="lazy">
+          <source media="(min-width: 1440px)" srcset="./img/map-desktop@1.jpg" width="1440" height="400">
+          <source media="(min-width: 768px)" srcset="./img/map-tablet@1.jpg" width="768" height="400">
+          <img class="map__image" src="./img/map-mobile@1.jpg" srcset="./img/map-mobile@2x.jpg 2x" alt="Карта Санкт-Петербурга с отметкой на нашем офисе." width="320" height="362" loading="lazy">
         </picture>
       </div>
     </section>
@@ -145,10 +144,10 @@
   <footer class="page-footer">
     <div class="page__centerer">
       <div class="page-footer__container">
-        <a class="page-footer__logo link" href="#">
-          <img class="logo" src="" alt="Логотип интернет-магазина Кэт энерджи." width="128" height="24">
+        <a class="page-footer__logo" href="index.html">
+          <img class="logo" src="./img/logo.svg" alt="Логотип интернет-магазина Кэт энерджи." width="128" height="24">
         </a>
-        <ul class="page-footer__social-list list">
+        <ul class="page-footer__social-list">
           <li class="page-footer__social-item">
             <a class="page-footer__social-link page-footer__social-link--vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Кэт энерджи ВКонтакте.</span>
@@ -167,7 +166,7 @@
         </ul>
         <div class="page-footer__copyright copyright">
           <span class="visually-hidden">Ссылка на интенсив по адаптивной верстке htmlacademy.</span>
-          <a class="copyright__link link" href="https://htmlacademy.ru/intensive/adaptive" lang="en">HTML Academy
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" lang="en">HTML Academy
             <svg class="copyright__link-icon" width="27" height="34">
               <use href="./img/stack.svg#htmlacademy"></use>
             </svg>
