--- a/source/index.html
+++ b/source/index.html
@@ -7,175 +7,193 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Сайт">
   <title>Интернет-магазин кошачьего корма "Кэт энерджи"</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page__body">
-  <header class="main-header page__header">
-    <div class="page__centerer">
-      <div class="main-header__container">
-        <a class="main-header__logo logo" href="index.html">
-          <img class="main-header__logo-image" src="./img/logo-mark.svg" alt="Эмблема интернет-магазина Кэт энерджи." width="33" height="37">
-          <img class="main-header__logo-world" src="./img/logo.svg" alt="Логотип интернет-магазина Кэт энерджи." width="101" height="18">
-        </a>
-        <nav class="main-navigation">
-          <ul class="main-navigation__list main-navigation__list--close main-navigation__list--nojs">
-            <li class="main-navigation__item">
-              <a class="main-navigation__link main-navigation__link--main main-navigation__link--current" href="index.html">Главная</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link main-navigation__link--main" href="catalog.html">Каталог продукции</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link main-navigation__link--main" href="form.html">Подбор программы</a>
-            </li>
-          </ul>
-          <button class="main-navigation__toggle" type="button">
-            <span class="visually-hidden">Открыть меню.</span>
-          </button>
-        </nav>
-      </div>
+  <header class="main-header">
+    <div class="main-header__container main-header__container--nojs">
+      <a class="main-header__logo" href="index.html" aria-current="page">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="./img/logo.svg#desktop" width="210" height="60">
+          <source media="(min-width: 768px)" srcset="./img/logo.svg#tablet" width="210" height="60">
+          <img class="main-header__logo-image" src="./img/logo.svg#mobile" alt="Логотип интернет-магазина Кэт энерджи." width="210" height="60">
+        </picture>
+      </a>
+      <nav class="main-navigation">
+        <ul class="main-navigation__list main-navigation__list--main">
+          <li class="main-navigation__item">
+            <a class="main-navigation__link" href="index.html" aria-current="step">Главная</a>
+          </li>
+          <li class="main-navigation__item">
+            <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-navigation__item">
+            <a class="main-navigation__link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+      <button class="main-navigation__toggle" type="button">
+        <span class="visually-hidden">Открыть меню.</span>
+      </button>
     </div>
   </header>
   <main class="main-index">
     <section class="intro">
-      <div class="page__centerer">
-        <div class="intro__container">
-          <h1 class="intro__title">Функциональное <br>питание для котов</h1>
-          <p class="intro__description">Занялся собой? Займись котом!</p>
-          <a class="intro__button" href="#">Подобрать программу</a>
-          <div class="intro__image-wrapper">
-            <picture>
-              <source media="(min-width: 1440px)" srcset="./img/index-can-desktop@1.png 1x, ./img/index-can-desktop@2x.png 2x" width="552" height="499">
-              <source media="(min-width: 768px)" srcset="./img/index-can-tablet@1.png 1x, ./img/index-can-tablet@2x.png 2x" width="709" height="609">
-              <img class="intro__image" src="./img/index-can-mobile@1.png" srcset="./img/index-can-mobile@2x.png 2x" alt="Изображение корма Кэт Энерджи со вкусом курица." width="280" height="270">
-            </picture>
+      <div class="intro__container">
+        <h1 class="intro__title">Функциональное <br>питание для котов</h1>
+        <p class="intro__description">Занялся собой? Займись котом!</p>
+        <a class="intro__button" href="#">Подобрать программу</a>
+        <div class="intro__image-wrapper">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="./img/index-can-desktop@1.webp 1x, ./img/index-can-desktop@2x.webp 2x" width="552" height="499">
+            <source media="(min-width: 768px)" srcset="./img/index-can-tablet@1.webp 1x, ./img/index-can-tablet@2x.webp 2x" width="709" height="609">
+            <source type="image/webp" srcset="./img/index-can-mobile@1.webp 1x, ./img/index-can-mobile@2x.webp 2x" width="280" height="270">
+            <source media="(min-width: 1440px)" srcset="./img/index-can-desktop@1.png 1x, ./img/index-can-desktop@2x.png 2x" width="552" height="499">
+            <source media="(min-width: 768px)" srcset="./img/index-can-tablet@1.png 1x, ./img/index-can-tablet@2x.png 2x" width="709" height="609">
+            <img class="intro__image" src="./img/index-can-mobile@1.png" srcset="./img/index-can-mobile@2x.png 2x" alt="Изображение корма Кэт Энерджи со вкусом курица." width="280" height="270">
+          </picture>
         </div>
-      </div>
       </div>
     </section>
     <section class="main-index__want want">
-      <div class="page__centerer">
-        <div class="want__container">
-          <h2 class="visually-hidden">Подбор корма по вашим потребностям.</h2>
-          <ul class="want__list">
-            <li class="want__item want__item--weight-loss">
-              <h3 class="want__title">Похудение</h3>
-              <p class="want__description">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="want__link" href="#">Каталог slim</a>
-            </li>
-            <li class="want__item want__item--weight-gain">
-              <h3 class="want__title">Набор массы</h3>
-              <p class="want__description">Заработать авторитет среди дворовых котов и&nbsp;даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <a class="want__link" href="#">Каталог pro</a>
-            </li>
-          </ul>
-        </div>
+      <div class="want__container">
+        <h2 class="visually-hidden">Подбор корма по вашим потребностям.</h2>
+        <ul class="want__list">
+          <li class="want__item">
+            <h3 class="want__title">Похудение</h3>
+            <p class="want__description">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="want__link" href="#">Каталог slim</a>
+          </li>
+          <li class="want__item">
+            <h3 class="want__title">Набор массы</h3>
+            <p class="want__description">Заработать авторитет среди дворовых котов и&nbsp;даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="want__link" href="#">Каталог pro</a>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="main-index__idea idea">
-      <div class="page__centerer">
+      <div class="idea__container">
         <h2 class="idea__title">Как это работает</h2>
         <ol class="idea__list">
-          <li class="idea__item">
+          <li class="idea__item idea__item--leaf">
             <p class="idea__description">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
-          <li class="idea__item">
+          <li class="idea__item idea__item--powder">
             <p class="idea__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
           </li>
-          <li class="idea__item">
+          <li class="idea__item idea__item--eating">
             <p class="idea__description">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
           </li>
-          <li class="idea__item">
+          <li class="idea__item idea__item--alarm">
             <p class="idea__description">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
           </li>
         </ol>
       </div>
     </section>
     <section class="main-index__slider slider">
-      <div class="page__centerer">
-        <div class="slider__container">
-          <h2 class="slider__title">Живой пример</h2>
-          <div class="slider__content">
-            <p class="slider__description">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
-            <dl class="slider__outlay outlay">
-              <div class="slider__characteristic">
-                <dt class="slider__outlay-characteristic">снижение веса</dt>
-                <dd class="slider__outlay-meaning">5 кг</dd>
-              </div>
-              <div class="slider__characteristic">
-                <dt class="slider__outlay-characteristic">затрачено времени</dt>
-                <dd class="slider__outlay-meaning">60 дней</dd>
-              </div>
-              <div class="slider__characteristic slider__characteristic--total">
-                <dt class="outlay__characteristic">Затраты на питание:</dt>
-                <dd class="outlay__meaning">15 000 руб.</dd>
-              </div>
-            </dl>
+      <div class="slider__container">
+        <h2 class="slider__title">Живой пример</h2>
+        <div class="slider__content">
+          <p class="slider__description">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
+          <dl class="slider__outlay outlay">
+            <div class="slider__characteristic">
+              <dt class="slider__outlay-characteristic">снижение веса</dt>
+              <dd class="slider__outlay-meaning">5 кг</dd>
+            </div>
+            <div class="slider__characteristic">
+              <dt class="slider__outlay-characteristic">затрачено времени</dt>
+              <dd class="slider__outlay-meaning">60 дней</dd>
+            </div>
+            <div class="slider__characteristic slider__characteristic--total">
+              <dt class="outlay__characteristic">Затраты на питание:</dt>
+              <dd class="outlay__meaning">15 000 руб.</dd>
+            </div>
+          </dl>
+        </div>
+        <div class="slider__image-wrapper">
+          <div>
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/fat-cat-tablet@1.png 1x, ./img/fat-cat-tablet@2x.png 2x" width="560" height="512">
+              <img class="slider__image slider__image--state-before" src="./img/fat-cat-mobile@1.png" srcset="./img/fat-cat-mobile@2x.png 2x" alt="Борис до похудения." width="280" height="256">
+            </picture>
           </div>
-          <div class="slider__image-wrapper">
-            <img class="slider__image slider__image--state_before" src="./img/fat-cat-mobile@1.png" srcset="./img/fat-cat-mobile@2x.png 2x" alt="Изображение кота до похудения." width="280" height="256">
-            <div class="slider__control"></div>
-            <img class="slider__image slider__image--state_after" src="./img/cat-thin-mobile@1.png" srcset="./img/thin-cat-mobile@2x.png 2x" alt="Изображение кота после похудения." width="280" height="256">
+          <div class="slider__control">
+            <button class="slider__button" type="button">
+              <span class="visually-hidden">Ползунок слайдера</span>
+            </button>
+          </div>
+          <div>
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/cat-thin-tablet@1.png 1x, ./img/cat-thin-tablet@2x.png 2x" width="560" height="512">
+              <img class="slider__image slider__image--state-after" src="./img/cat-thin-mobile@1.png" srcset="./img/thin-cat-mobile@2x.png 2x" alt="Борис после похудения." width="280" height="256">
+            </picture>
           </div>
         </div>
       </div>
     </section>
     <section class="main-index__map map map--nojs">
-      <div class="page__centerer">
-        <div class="map__container">
+      <div class="map__container">
+        <div class="map__text-wrapper">
           <h2 class="map__title">Приглашаем <br> к&nbsp;сотрудничеству <br> дилеров!</h2>
           <address class="map__address address">
             <span class="address__text">ул. Большая</span>
             <span class="address__text">Конюшенная, д. 19/8</span>
-            <span class="address__text address__text--city">Санкт-Петербург</span>
+            <span class="address__text">Санкт-Петербург</span>
           </address>
         </div>
       </div>
       <div class="map__wrapper">
         <picture>
-          <source media="(min-width: 1440px)" srcset="./img/map-desktop@1.jpg" width="1440" height="400">
-          <source media="(min-width: 768px)" srcset="./img/map-tablet@1.jpg" width="768" height="400">
+          <source media="(min-width: 1440px)" srcset="./img/map-desktop@1.jpg 1x, ./img/map-desktop@2x.jpg 2x" width="1440" height="400">
+          <source media="(min-width: 768px)" srcset="./img/map-tablet@1.jpg 1x, ./img/map-tablet@2x.jpg 2x" width="768" height="400">
           <img class="map__image" src="./img/map-mobile@1.jpg" srcset="./img/map-mobile@2x.jpg 2x" alt="Карта Санкт-Петербурга с отметкой на нашем офисе." width="320" height="362" loading="lazy">
         </picture>
       </div>
     </section>
   </main>
   <footer class="page-footer">
-    <div class="page__centerer">
-      <div class="page-footer__container">
-        <a class="page-footer__logo" href="index.html">
-          <img class="logo" src="./img/logo.svg" alt="Логотип интернет-магазина Кэт энерджи." width="128" height="24">
-        </a>
-        <ul class="page-footer__social-list">
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-link page-footer__social-link--vk" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Кэт энерджи ВКонтакте.</span>
-            </a>
-          </li>
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-link page-footer__social-link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Кэт энерджи на YouTube.</span>
-            </a>
-          </li>
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-link page-footer__social-link--telegram" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Кэт энерджи в Телеграм.</span>
-            </a>
-          </li>
-        </ul>
-        <div class="page-footer__copyright copyright">
-          <span class="visually-hidden">Ссылка на интенсив по адаптивной верстке htmlacademy.</span>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" lang="en">HTML Academy
-            <svg class="copyright__link-icon" width="27" height="34">
-              <use href="./img/stack.svg#htmlacademy"></use>
-            </svg>
+    <div class="page-footer__container">
+      <a class="page-footer__logo" href="#">
+        <picture>
+          <source media="(min-width: 768px)" srcset="./img/logo.svg#footer-logo-tablet" width="143" height="27">
+          <img class="page-footer__logo-image" src="./img/logo.svg#footer-logo-mobile" alt="Логотип интернет-магазина Кэт энерджи." width="210" height="60">
+        </picture>
+      </a>
+      <ul class="page-footer__social-list">
+        <li class="page-footer__social-item">
+          <a class="page-footer__social-link" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Кэт энерджи ВКонтакте.</span>
+            <img class="page-footer__social-image" src="./img/stack.svg#vkontakte" width="29" height="22">
           </a>
-        </div>
+        </li>
+        <li class="page-footer__social-item">
+          <a class="page-footer__social-link" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Кэт энерджи на YouTube.</span>
+            <img class="page-footer__social-image" src="./img/stack.svg#youtube" width="29" height="22">
+          </a>
+        </li>
+        <li class="page-footer__social-item">
+          <a class="page-footer__social-link" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Кэт энерджи в Телеграм.</span>
+            <img class="page-footer__social-image" src="./img/stack.svg#telegram" width="29" height="22">
+          </a>
+        </li>
+      </ul>
+      <div class="page-footer__copyright copyright">
+        <span class="visually-hidden">Ссылка на интенсив по адаптивной верстке htmlacademy.</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" lang="en">HTML Academy
+        </a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <svg class="copyright__link-icon" width="27" height="34">
+            <use href="./img/logo.svg#academy-logo"></use>
+          </svg>
+        </a>
       </div>
     </div>
   </footer>
-  <script src="./js/script.js"></script>
+  <script src="./js/script.min.js"></script>
 </body>
 
 </html>
