--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,7 +33,7 @@
           </li>
         </ul>
       </nav>
-      <button class="main-navigation__toggle" type="button">
+      <button class="main-header__toggle-navigation" type="button">
         <span class="visually-hidden">Открыть меню.</span>
       </button>
     </div>
@@ -335,20 +335,17 @@
       <ul class="page-footer__social-list">
         <li class="page-footer__social-item">
           <a class="page-footer__social-link" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Кэт энерджи ВКонтакте.</span>
-            <img class="page-footer__social-image" src="./img/stack.svg#vkontakte" width="29" height="22">
+            <img class="page-footer__social-image" src="./img/stack.svg#vkontakte" width="29" height="22" alt="Кэт энерджи ВКонтакте.">
           </a>
         </li>
         <li class="page-footer__social-item">
           <a class="page-footer__social-link" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">Кэт энерджи на YouTube.</span>
-            <img class="page-footer__social-image" src="./img/stack.svg#youtube" width="29" height="22">
+            <img class="page-footer__social-image" src="./img/stack.svg#youtube" width="29" height="22" alt="Кэт энерджи на YouTube.">
           </a>
         </li>
         <li class="page-footer__social-item">
           <a class="page-footer__social-link" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Кэт энерджи в Телеграм.</span>
-            <img class="page-footer__social-image" src="./img/stack.svg#telegram" width="29" height="22">
+            <img class="page-footer__social-image" src="./img/stack.svg#telegram" width="29" height="22" alt="Кэт энерджи в Телеграм.">
           </a>
         </li>
       </ul>
