--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,10 @@
   <meta name="description" content="Сайт">
   <title>Интернет-магазин кошачьего корма "Кэт энерджи"</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png">
+  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="manifest" href="/manifest.webmanifest">
 </head>
 
 <body class="page__body">
